# spookyhouse

./: .gitignore  CMakeLists.txt  Todo.txt
.cache/clangd/index/: Animator.h.4DA34952BCCC1E06.idx  Array2D.h.71699D9EF189DE44.idx  BoundingBox.h.584934D914A7728C.idx  BroadCollision.h.E30CAC814DC4EE67.idx  Camera.cpp.4248CF12EBD47D8F.idx  Camera.h.341E54F59E6954E3.idx  CameraHolder.cpp.2AAFBE610D51B316.idx  CameraHolder.h.75FF5A5BA39070D9.idx  Collider.h.9A5479FFA2CC9F51.idx  Cube.cpp.873A10B7C83DB7C7.idx  Cube.h.4B20240228D7BD8C.idx  Instance.h.71F3F2236E003494.idx  Mesh.cpp.C1BC3D1060F61C4F.idx  Mesh.h.69EB7EAB5F146574.idx  Model.cpp.9A9B853E0F2B9334.idx  Model.h.E69D8ED2D5C380A9.idx  Object.h.950D608BE2FBE26A.idx  Physics.h.51B5FFE01C709083.idx  PlayerState.h.1C51BC34F5E56797.idx  Renderer.h.B2C9CE34F6EFF4B8.idx  Resolver.h.6AF3EC56EB58947D.idx  STBImage.cpp.D49457AA4BAA366A.idx  STBImage.h.17C007708BE11354.idx  Shader.cpp.12E68D4F60A9939C.idx  Shader.h.4AF63AAF47F3A0E9.idx  Spline.h.254049635012A80B.idx  SweepPrune.h.0EB3AB4F63DF42E3.idx  Terrain.cpp.017D536638D24B9D.idx  Terrain.h.FE949E1008912B81.idx  Texture.cpp.55A035C184020746.idx  Texture.h.A2AAAD1D4916C986.idx  TextureGeneration.h.2019BBF44D0047EE.idx  Utilities.h.68CDE24358E25AD9.idx  Vertex.h.1B52B4E631CD792F.idx  (+23 more)
assets/house/: hh.mtl
assets/lamps/: lamps.mtl
assets/track/: cartDoor.mtl  spokytrackobj.mtl  wheelBack.mtl  wheelFront.mtl
assets/tree/: spookytree.mtl
include/: Animator.h  BoundingBox.h  BroadCollision.h  Camera.h  CameraHolder.h  Collider.h  Cube.h  Depth.h  Instance.h  Mesh.h  Model.h  Object.h  Physics.h  PhysicsUtils.h  PlayerState.h  Renderer.h  Resolve.h  Resolver.h  Shader.h  SweepPrune.h  Terrain.h  TextureUtils.h  stb_image.h
include/lib/: stb_image_write.h
include/utils/: Array2D.h  Spline.h  Texture.h  Utilities.h  Vertex.h
src/: BoundingBox.cpp  Camera.cpp  Mesh.cpp  Model.cpp  Object.cpp  Shader.cpp  Terrain.cpp  Texture.cpp  TextureUtils.cpp  basic.frag.glsl  basic.vert.glsl  depthShader.frag.glsl  main.cpp  modelLoading.frag.glsl  modelLoading.vert.glsl  rain.frag.glsl  rain.vert.glsl  shadow.frag.glsl  terrain.frag.glsl  terrain.vert.glsl  tree.vert.glsl  working.txt
(+3 files in other folders)
